# hassaddons

./: .gitignore  NOTES.md  README.md  package.json  repository.yaml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: build-and-push-addon.yml  build-and-push-ocppsigen2mqtt.yml
modqtt/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  config.yaml  modqtt.example.yml  pyproject.toml  registers.example.yml  run.sh
modqtt/config_local/: modqtt.example.yml  modqtt.yaml
modqtt/src/: app.py  config.py  decoder.py  modbus_client.py  models.py  mqtt_client.py  publisher.py
modqtt/tests/: test_config_validation.py  test_decoder.py
modqtt/tests/fixtures/: sample_config.yml
ocppsigen2mqtt/: .env.example  .gitignore  CHANGELOG.md  DOCS.md  Dockerfile  config.yaml  package.json  pyproject.toml  run.sh  tsconfig.json
ocppsigen2mqtt/public/: index.html
ocppsigen2mqtt/src/: config.py  index.ts  mqttClient.ts  ocppServer.ts  server.py  webserver.ts
ocppsigen2mqtt/tests/: test_config.py  test_server.py
